--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
           <h2 class="benefits-title visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <div class="container-icon">
+                <svg class="stategy-icon" 
+                width="64" 
+                height="64" 
+                aria-label="benefits strategy icon">
+                  <use href="./images/icon/icon.svg#icon-strategy"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Strategy</h3>
               <p class="benefits-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +87,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="container-icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                  <use href="./images/icon/icon.svg#icon-punctuality"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Punctuality</h3>
               <p class="benefits-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +99,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="container-icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                  <use href="./images/icon/icon.svg#icon-diligence"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Diligence</h3>
               <p class="benefits-list-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +111,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="container-icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                  <use href="./images/icon/icon.svg#icon-technologies"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-title">Technologies</h3>
               <p class="benefits-list-text">
                 Design practice focused on digital experiences. We bring forth a
