--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="container-icon">
-                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits punctuality icon">
                   <use href="./images/icon/icon.svg#icon-punctuality"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="container-icon">
-                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits diligence icon">
                   <use href="./images/icon/icon.svg#icon-diligence"></use>
                 </svg>
               </div>
@@ -112,7 +112,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="container-icon">
-                <svg class="stategy-icon" width="64" height="64" aria-label="benefits strategy icon">
+                <svg class="stategy-icon" width="64" height="64" aria-label="benefits technologies icon">
                   <use href="./images/icon/icon.svg#icon-technologies"></use>
                 </svg>
               </div>
@@ -142,6 +142,27 @@
               <div class="container-team-title-text">
                 <h3 class="our-team-list-title">Mark Guerrero</h3>
                 <p class="our-team-list-text">Product Designer</p>
+                <ul class="social-icon-list">
+                <li class="social-icon-item">
+                  <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
+                    <use href="./images/icon/icon.svg#icon-instagram"></use>
+                  </svg></a></li>
+                <li class="social-icon-item">
+                  <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
+                      <use href="./images/icon/icon.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="social-icon-item">
+                  <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
+                      <use href="./images/icon/icon.svg#icon-facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="social-icon-item">
+                  <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
+                      <use href="./images/icon/icon.svg#icon-linkedin"></use>
+                    </svg></a>
+                </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -154,6 +175,28 @@
               <div class="container-team-title-text">
                 <h3 class="our-team-list-title">Tom Ford</h3>
                 <p class="our-team-list-text">Frontend Developer</p>
+                <ul class="social-icon-list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
+                        <use href="./images/icon/icon.svg#icon-instagram"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
+                        <use href="./images/icon/icon.svg#icon-twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
+                        <use href="./images/icon/icon.svg#icon-facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
+                        <use href="./images/icon/icon.svg#icon-linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -166,6 +209,28 @@
               <div class="container-team-title-text">
                 <h3 class="our-team-list-title">Camila Garcia</h3>
                 <p class="our-team-list-text">Marketing</p>
+                <ul class="social-icon-list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
+                        <use href="./images/icon/icon.svg#icon-instagram"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
+                        <use href="./images/icon/icon.svg#icon-twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
+                        <use href="./images/icon/icon.svg#icon-facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
+                        <use href="./images/icon/icon.svg#icon-linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-list-item">
@@ -178,6 +243,28 @@
               <div class="container-team-title-text">
                 <h3 class="our-team-list-title">Daniel Wilson</h3>
                 <p class="our-team-list-text">UI Designer</p>
+                <ul class="social-icon-list">
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
+                        <use href="./images/icon/icon.svg#icon-instagram"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
+                        <use href="./images/icon/icon.svg#icon-twitter"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
+                        <use href="./images/icon/icon.svg#icon-facebook"></use>
+                      </svg></a>
+                  </li>
+                  <li class="social-icon-item">
+                    <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
+                        <use href="./images/icon/icon.svg#icon-linkedin"></use>
+                      </svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
