--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 width="64" 
                 height="64" 
                 aria-label="benefits strategy icon">
-                  <use href="./images/icon.svg#icon-strategy"></use>
+                  <use href="./images/icons/icons.svg#icon-strategy"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Strategy</h3>
@@ -89,7 +89,7 @@
             <li class="benefits-list-item">
               <div class="container-icon">
                 <svg class="stategy-icon" width="64" height="64" aria-label="benefits punctuality icon">
-                  <use href="./images/icon.svg#icon-punctuality"></use>
+                  <use href="./images/icons/icons.svg#icon-punctuality"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Punctuality</h3>
@@ -101,7 +101,7 @@
             <li class="benefits-list-item">
               <div class="container-icon">
                 <svg class="stategy-icon" width="64" height="64" aria-label="benefits diligence icon">
-                  <use href="./images/icon.svg#icon-diligence"></use>
+                  <use href="./images/icons/icons.svg#icon-diligence"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Diligence</h3>
@@ -113,7 +113,7 @@
             <li class="benefits-list-item">
               <div class="container-icon">
                 <svg class="stategy-icon" width="64" height="64" aria-label="benefits technologies icon">
-                  <use href="./images/icon.svg#icon-technologies"></use>
+                  <use href="./images/icons/icons.svg#icon-technologies"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-title">Technologies</h3>
@@ -145,21 +145,21 @@
                 <ul class="social-icon-list">
                 <li class="social-icon-item">
                   <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
-                    <use href="./images/icon.svg#icon-instagram"></use>
+                    <use href="./images/icons/icons.svg#icon-instagram"></use>
                   </svg></a></li>
                 <li class="social-icon-item">
                   <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
                     </svg></a>
                 </li>
                 <li class="social-icon-item">
                   <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
                     </svg></a>
                 </li>
                 <li class="social-icon-item">
                   <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
                     </svg></a>
                 </li>
                 </ul>
@@ -178,22 +178,22 @@
                 <ul class="social-icon-list">
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
@@ -212,22 +212,22 @@
                 <ul class="social-icon-list">
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
@@ -246,22 +246,22 @@
                 <ul class="social-icon-list">
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="instagram icon">
-                        <use href="./images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="twitter icon">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="facebook icon">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
                       </svg></a>
                   </li>
                   <li class="social-icon-item">
                     <a class="social-icon-link" href=""><svg class="social-icon" width="16" height="16" aria-label="linkedin icon">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
                       </svg></a>
                   </li>
                 </ul>
