--- a/index.html
+++ b/index.html
@@ -278,12 +278,16 @@
           <h2 class="our-portfolio-title section-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-list-item">
+              <div class="container-portfolio-transform">
               <img
                 src="./images/our-portfolio/banking-app.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
+              <p class="container-transform-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+              Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Banking App</h3>
                 <p class="our-portfolio-list-text">App</p>
