--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
           <h2 class="our-portfolio-title section-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-list-item">
-              <div class="container-portfolio-transform">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/banking-app.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
-              <p class="container-transform-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
               Cloud Storage App</p>
               </div>
               <div class="container-portfolio-title-text">
