--- a/index.html
+++ b/index.html
@@ -294,60 +294,85 @@
               </div>
             </li>
             <li class="our-portfolio-list-item">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Cashless Payment</h3>
                 <p class="our-portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-list-item">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Meditation App</h3>
                 <p class="our-portfolio-list-text">App</p>
               </div>
             </li>
             <li class="our-portfolio-list-item">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Taxi Service</h3>
                 <p class="our-portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-list-item">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/screen-illustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Screen Illustrations</h3>
                 <p class="our-portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="our-portfolio-list-item">
+              <div class="overlay">
               <img
                 src="./images/our-portfolio/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+              </div>
               <div class="container-portfolio-title-text">
                 <h3 class="our-portfolio-list-title">Online Courses</h3>
                 <p class="our-portfolio-list-text">Marketing</p>
