--- a/index.html
+++ b/index.html
@@ -533,9 +533,8 @@
     <!-- ============== FOOTER ============== -->
 
     <footer class="footer">
-      <div class="container">
-        <div class="container-footer">
-          <div class="container-footer-logo">
+      <div class="container container-footer">
+        <div class="container-footer-logo">
             <a class="logo-footer" href="./index.html"
               >Web<span class="footer-logo-web">Studio</span></a
             >
@@ -598,7 +597,6 @@
             </ul>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
